<resources>
    <string name="app_name">Graduation Project</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_nclick_to_login">Registered already? Click to Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>
