<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">

    <!--
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:text="Sign Up"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

        -->

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_field_bg"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_bg"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/mobileNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_bg"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="#FFFFFF"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="@+id/lastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/lastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="@+id/mobileNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/mobileNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_bg"
        android:hint="Username"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_field_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <!--        &lt;!&ndash; TODO : set drawable icons for the edit texts &ndash;&gt;-->


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>